--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Hello world!</h1>
     <p>Welcome to my GitHub Pages site!</p>
+    <img src="pikachu.png" alt="Girl in a jacket" width="500" height="600">
   </body>
 </html>
